create admin/config page.now u can config some site information

--- a/sirenappengine/jieblog/TextStyle/base.html
+++ b/sirenappengine/jieblog/TextStyle/base.html
@@ -28,7 +28,8 @@
 		{% block contents %}{% endblock%}
 		<div id="bottom">
 			<hr/>
-			<h4 id="copyright">Copyright © 2008 JIEblog Powered by Google Appengine | Designed by lucidanui</h4>
+			<h4 id="copyright">{{ site.site_copyright }} | Maded by {{ site.owner_name }}</h4>
+			<h5 id="license">{{ site.content_license }}</h5>
 		</div>
 	</div>
 </body>
