--- a/sirenappengine/jieblog/TextStyle/comment.html
+++ b/sirenappengine/jieblog/TextStyle/comment.html
@@ -6,8 +6,15 @@
 		</div>
 		<div class="comment-content">
 			{{comment.comments_content}}
-			<div class="comment-info">Comment By <a href="{{ comment.comments_author_link }}">{{comment.comments_author|jieblognickname}}</a>
-			{{comment.comments_post_on|timezone:8|date:"Y-m-d H:i:s"}}
+			<div class="comment-info">
+				<span class="comment-by"></span>
+				<span class="comment-author">
+					<a href="{{ comment.comments_author_link }}">
+						{{comment.comments_author|jieblognickname}}
+					</a>
+				</span>
+				<span class="comment-by2">Post on </span>
+				<span class="comment-time">{{comment.comments_post_on|timezone:8|date:"Y-m-d H:i:s"}}</span>
 			</div>
 		</div>
 	</div>
