--- a/sirenappengine/jieblog/TextStyle/single-side.html
+++ b/sirenappengine/jieblog/TextStyle/single-side.html
@@ -1,8 +1,4 @@
-<div id="header">
-	<h1 id="blog-title"><a href="/">JIEblog</a></h1>
-	<h5 id="subheading">Everything happens for a reason</h5>
-</div>
-
+{% include 'header.html' %}
 <div class="widget">
 	<div class="widget-title" >
 		<h3>Navigate</h3>
