--- a/sirenappengine/jieblog/TextStyle/side.html
+++ b/sirenappengine/jieblog/TextStyle/side.html
@@ -1,7 +1,4 @@
-<div id="header">
-	<h1 id="blog-title"><a href="/">jieblog</a></h1>
-	<h5 id="subheading">Everything happens for a reason</h5>
-</div>
+{% include 'header.html' %}
 
 <div class="widget" id="navigate">
 	<div class="widget-title" >
@@ -72,7 +69,7 @@
 	</div>
 </div>
 
-<div class="widget">
+<div class="widget" id="tag-cloud">
 	<div class="widget-title"><h3>Tags Cloud</h3></div>
 	<div class="widget-content">
 		{% for tag in tag_cloud %}
