--- a/sirenappengine/jieblog/admin/AdminConfig.html
+++ b/sirenappengine/jieblog/admin/AdminConfig.html
@@ -1,9 +1,7 @@
 {% extends 'AdminBase.html' %}
 {% block contents %}
 <div id="side">
-	<div id="header">
-		<h1 id="blog-title"><a href="/">jieblog</a></h1>
-	</div>
+{% include 'AdminSide.html' %}
 	<div class="widget" id="navigate">
 		<h3>Navigate</h3>
 		<ul id='menu'>
@@ -16,17 +14,9 @@
 <div id="main">
 	<div id='main-form'>
 		<form action="." method="post" id="siteform">
-			{{siteform.as_ul}}
+			{{siteform.as_p}}
 			<input type="submit" name="submit" value="Submit" id="submit"/>
 		</form>
-		{% for site in sites %}
-		<div class="test">
-			{{site.site_title}}
-		</div>
-		<div class="test">
-			{{site.sub_title}}
-		</div>
-		{% endfor %}
 	</div>
 </div>
 {% endblock%}
