--- a/sirenappengine/jieblog/admin/AdminDashboard.html
+++ b/sirenappengine/jieblog/admin/AdminDashboard.html
@@ -1,9 +1,7 @@
 {% extends 'AdminBase.html' %}
 {% block contents %}
 <div id="side">
-	<div id="header">
-		<h1 id="blog-title"><a href="/">jieblog</a></h1>
-	</div>
+{% include 'AdminSide.html' %}
 	<div class="widget" id="navigate">
 		<h3>Navigate</h3>
 		<ul id='menu'>
