--- a/sirenappengine/jieblog/admin/AdminManage.html
+++ b/sirenappengine/jieblog/admin/AdminManage.html
@@ -2,10 +2,7 @@
 {% load filter %}
 {% block contents %}
 <div id="side">
-	<div id="header">
-		<h1 id="blog-title"><a href="/">jieblog</a></h1>
-		<h5 id="subheading">Everything happens for a reason</h5>
-	</div>
+	{% include 'AdminSide.html' %}
 	<div class="widget" id="navigate">
 		<h3>Navigate</h3>
 		<ul id='menu'>
