--- a/sirenappengine/jieblog/admin/AdminPost.html
+++ b/sirenappengine/jieblog/admin/AdminPost.html
@@ -1,6 +1,6 @@
 <div id='main-form'>
 	<form action="." method="post"  id="form1">
-		{{postform.as_ul}}
+		{{postform.as_p}}
 		<input type="submit" name="submit" value="Submit" id="submit"/>
 	</form>
 </div>
