add catagory manage page for admin

--- a/sirenappengine/jieblog/admin/AdminDashboard.html
+++ b/sirenappengine/jieblog/admin/AdminDashboard.html
@@ -5,9 +5,10 @@
 	<div class="widget" id="navigate">
 		<h3>Navigate</h3>
 		<ul id='menu'>
-			<li class="current-page "><a href='/admin/create' title='Create Post'>Create Post</a></li>
+			<li class="current-page"><a href='/admin/create' title='Create Post'>Create Post</a></li>
 			<li class="not-current"><a href='/admin/config' title='Site Config'>Site Config</a></li>
 			<li class="not-current"><a href='/admin/manage' title='Post Manage'>Post Manage</a></li>
+			<li class="not-current"><a href='/admin/catagory' title='Catagory Manage'>Catagory Manage</a></li>
 		</ul>
 	</div>
 </div>
