admin style fix. add wiki functions

--- a/sirenappengine/jieblog/TextStyle/side.html
+++ b/sirenappengine/jieblog/TextStyle/side.html
@@ -8,6 +8,7 @@
 		<ul id='menu'>
 			<li class="current-page "><a href='/' title='Home'>Home</a></li>
 			<li class="not-current-page">{{greeting}}</li>
+			<li><a href="/wiki" title="JIEBlog Wiki" target="_blank">Wiki</a></li>
 			<li class="not-current-page"><a href='http://feeds.feedburner.com/sirenengine' title='RSS'>RSS</a></li>
 		</ul>
 	</div>
