--- a/sirenappengine/jieblog/admin/AdminConfig.html
+++ b/sirenappengine/jieblog/admin/AdminConfig.html
@@ -9,6 +9,7 @@
 			<li class="current-page"><a href='/admin/config' title='Site Config'>Site Config</a></li>
 			<li class="not-current"><a href='/admin/manage' title='Post Manage'>Post Manage</a></li>
 			<li class="not-current"><a href='/admin/catagory' title='Catagory Manage'>Catagory Manage</a></li>
+			<li class="not-current"><a href='/admin/wiki' title='Wiki Manage'>Wiki Manage</a></li>
 		</ul>
 	</div>
 </div>
