--- a/sirenappengine/jieblog/admin/AdminWiki.html
+++ b/sirenappengine/jieblog/admin/AdminWiki.html
@@ -5,15 +5,20 @@
 	<div class="widget" id="navigate">
 		<h3>Navigate</h3>
 		<ul id='menu'>
-			<li class="current-page"><a href='/admin/create' title='Create Post'>Create Post</a></li>
+			<li class="not-current"><a href='/admin/create' title='Create Post'>Create Post</a></li>
 			<li class="not-current"><a href='/admin/config' title='Site Config'>Site Config</a></li>
 			<li class="not-current"><a href='/admin/manage' title='Post Manage'>Post Manage</a></li>
 			<li class="not-current"><a href='/admin/catagory' title='Catagory Manage'>Catagory Manage</a></li>
-			<li class="not-current"><a href='/admin/wiki' title='Wiki Manage'>Wiki Manage</a></li>
+			<li class="current-page"><a href='/admin/wiki' title='Wiki Manage'>Wiki Manage</a></li>
 		</ul>
 	</div>
 </div>
 <div id="main">
-	{% include 'AdminPost.html'%}
+	<div id='main-form'>
+		<form action="." method="post" id="wikiform">
+			{{wikiform.as_p}}
+			<input type="submit" name="submit" value="Submit" id="submit"/>
+		</form>
+	</div>
 </div>
 {% endblock%}
